third_party/move/move-compiler-v2/tests/checking/typing/vector_with_non_base_type_inferred.exp

Diagnostics:
error: invalid type instantiation `&u64`: only structs, vectors, and primitive types allowed
  ┌─ tests/checking/typing/vector_with_non_base_type_inferred.move:4:9
  │
4 │         vector[&0];
  │         ^^^^^^
